# puc-rio-sprint-03-service-a

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: app.py
src/config/database/: __init__.py  db_config.py  db_setup.py
src/models/: __init__.py  article.py  child.py  parent.py
src/schemas/: __init__.py  articles.py  child.py  error.py  parent.py
