[tool.poetry]
name = "puc-rio-sprint-03-service-a"
version = "0.1.0"
description = ""
authors = ["Raphael <raphael@wrathcodes.com>"]
readme = "README.md"
packages = [{include = "puc_rio_sprint_03_service_a"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
