[tool.poetry]
name = "puc-rio-sprint-03-service-a"
version = "0.1.0"
description = ""
authors = ["Raphael <raphael@wrathcodes.com>"]
readme = "README.md"
packages = [{include = "puc_rio_sprint_03_service_a"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.3.3"
pylint = "^2.17.5"
black = "^23.7.0"
flake8 = "^6.1.0"
pytest = "^7.4.0"
sqlalchemy = "^2.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
